--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
-<div class="main-content flex gap-1">
-  <div>
+<div class="flex gap-10">
+  <div class="w-full max-w-96">
     <app-sidebar></app-sidebar>
   </div>
   <div class="grow">
+    <app-header></app-header>
     <ng-content></ng-content>
   </div>
 </div>
