--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -2,7 +2,7 @@
   <div class="w-full max-w-96">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="grow">
+  <div class="grow pl-10">
     <app-header></app-header>
     <ng-content></ng-content>
   </div>
