--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -1,4 +1,3 @@
-<fa-icon [icon]="faCoffee"></fa-icon>
-<div>
-  <app-table></app-table>
+<div class="pt-4">
+  <app-table [columns]="tableColumns" [data]="tableData" />
 </div>
