--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="w-full border-b flex justify-between items-center">
+<div class="w-full border-b flex justify-between items-center sticky top-0 bg-white z-50">
   <div class="h-32 flex items-center gap-4">
     <div class="w-16 h-16 flex items-center justify-center rounded-full border">
       <fa-icon class="text-xl" [icon]="faNotification" />
