--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,8 +19,8 @@
         {{ link.name }}
       </app-link>
       <p class="my-4">lorem</p>
-      <app-link class="w-full text-right" icon="faFile" href="#">
-        Link
+      <app-link class="w-full text-right" [icon]="faFile" href="#">
+        link
       </app-link>
     </div>
   </div>
