--- a/src/app/shared/link/link.component.html
+++ b/src/app/shared/link/link.component.html
@@ -3,7 +3,7 @@
   [class]="
     'link-primary link hover:link-active ' +
     class +
-    (active ? ' link-active' : '')
+    (isRouteActive(href) ? ' link-active' : '')
   "
 >
   <fa-icon [icon]="icon" />
@@ -11,7 +11,7 @@
     <ng-content />
   </span>
   <span
-    *ngIf="active"
+    *ngIf="isRouteActive(href)"
     class="absolute right-0 bg-secondary h-5 w-1.5 rounded-l-xl"
   ></span>
 </a>
