--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,14 +12,13 @@
       <app-link
         *ngFor="let link of links; let i = index"
         class="w-full text-right"
-        [active]="i === 0"
         [icon]="link.icon"
         [href]="link.href"
       >
         {{ link.name }}
       </app-link>
       <p class="my-4">lorem</p>
-      <app-link class="w-full text-right" [icon]="faFile" href="#">
+      <app-link class="w-full text-right" [icon]="faFile" href="/route-2">
         link
       </app-link>
     </div>
