--- a/src/app/shared/dropdown/dropdown.component.html
+++ b/src/app/shared/dropdown/dropdown.component.html
@@ -2,10 +2,16 @@
   <div>
     <button
       (click)="toggleDropdown()"
-      class="flex justify-between items-center gap-2 bg-secondary rounded-xl px-4 py-2.5 text-lg font-medium text-white"
+      [class]="
+        'dropdown ' +
+        (variant === 'primary' ? 'bg-secondary text-white' : 'border') +
+        (direction === 'ltr' ? '' : ' flex-row-reverse')
+      "
     >
       <span> {{ selected || defaultValue }}</span>
-      <img src="select-arrow.svg" alt="arrow" class="w-6" />
+      <div>
+        <fa-icon [icon]="icon || arrowDown" class="text-sm" />
+      </div>
     </button>
   </div>
   <div
