--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="w-full min-h-screen flex flex-col sticky top-0">
+<div class="w-full h-full flex flex-col">
   <div class="border-l px-6 grow flex flex-col">
     <div class="border-b h-32 flex items-center gap-4">
       <img src="logo.png" alt="logo" class="w-16" />
