--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,18 @@
         @apply text-black
     }
 
+    .dropdown {
+        @apply flex justify-between items-center gap-2 rounded-xl px-4 py-2.5 text-lg font-medium
+    }
+
+    .tab {
+        @apply text-xl font-bold text-gray-700 pb-4
+    }
+
+    .tab.active {
+        @apply text-black border-b-[3px] border-secondary
+    }
+
 }
 
 ::-webkit-scrollbar {
