--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,8 +1,8 @@
 <div class="flex gap-10">
-  <div class="w-full max-w-96">
+  <div class="w-full h-screen max-w-96 sticky top-0">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="grow pl-10 h-screen">
+  <div class="grow pl-10 h-screen overflow-auto">
     <app-header></app-header>
     <ng-content></ng-content>
   </div>
