--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -1,3 +1,29 @@
-<div class="pt-4">
-  <app-table [columns]="tableColumns" [data]="tableData" />
+<div class="my-4 border h-fit rounded-xl py-4">
+  <div class="border-b p-4 pb-0 pt-0">
+    <h3>Title</h3>
+    <div class="flex items-end justify-between">
+      <div class="flex gap-4">
+        <button class="tab active">Tab number 1</button>
+        <button class="tab">Tab number 1</button>
+      </div>
+      <div class="flex items-center gap-4 pb-4">
+        <app-input name="search" placeholder="search" [icon]="faSearch" />
+        <app-dropdown
+          defaultValue="Tap to Filter"
+          variant="secondary"
+          [options]="options"
+          [icon]="faFilter"
+          direction="rtl"
+        />
+        <app-dropdown
+          variant="secondary"
+          defaultValue="Tap to Sort"
+          [options]="options"
+        />
+      </div>
+    </div>
+  </div>
+  <div class="px-4 mt-4">
+    <app-table [columns]="tableColumns" [data]="tableData" />
+  </div>
 </div>
