--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -26,4 +26,19 @@
   <div class="px-4 mt-4">
     <app-table [columns]="tableColumns" [data]="tableData" />
   </div>
+  <div class="flex justify-between items-center py-6 px-4">
+    <div>
+      <span>2 out of 16</span>
+    </div>
+    <div class="flex items-center flex-row-reverse gap-2">
+      <app-button variant="secondary-outlined" class="py-1.5"> 1 </app-button>
+      <app-button variant="secondary-outlined" class="py-1.5"> 2 </app-button>
+      <app-button variant="secondary-outlined" class="py-1.5"> 3 </app-button>
+      <app-button variant="secondary-outlined" class="py-1.5"> 4 </app-button>
+      <app-button variant="secondary-outlined" class="py-1.5"> 5 </app-button>
+      <app-button variant="secondary-outlined" class="py-1.5"> ... </app-button>
+      <app-button variant="secondary-outlined" class="py-1.5"> 16 </app-button>
+    </div>
+    <div></div>
+  </div>
 </div>
